eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vincpr-api-deployment
  labels:
    app: vincpr-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vincpr-api
  template:
    metadata:
      labels:
        app: vincpr-api
    spec:
      containers:
        - name: vincpr-api
          image: 845409721587.dkr.ecr.ap-southeast-1.amazonaws.com/vincpr_backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
