eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vincpr-api-service
spec:
  selector:
    app: vincpr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
